updated 改造多线程工具类